packages/taquito-michel-codec/test/contracts_008/ill_typed/ticket_apply.tz
# This script attempts to duplicate a ticket by capturing it using APPLY.
# Is should fail at parsing because tickets are not packable so they are
# not allowed to be captured by APPLY.
parameter (ticket unit);
storage (option (pair (ticket unit) (ticket unit)));
code {
       CAR;
       LAMBDA (pair (ticket unit) unit) (ticket unit) { CAR };
       SWAP; APPLY;
       DUP;
       UNIT; EXEC; SWAP;
       UNIT; EXEC;
       PAIR;
       SOME;
       NIL operation;
       PAIR
     }
